--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
-  "dependencies": {
-    "openzeppelin-zos": "^1.9.4",
-    "zos-lib": "^1.4.1"
-  }
+    "scripts": {
+        "test": "NODE_ENV=test truffle test"
+    },
+    "dependencies": {
+        "bluebird": "^3.5.2",
+        "openzeppelin-zos": "^1.9.4",
+        "zos": "^1.4.2",
+        "zos-lib": "^1.4.1"
+    },
+    "devDependencies": {
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-es2015": "^6.18.0",
+        "babel-preset-stage-2": "^6.24.1",
+        "babel-preset-stage-3": "^6.17.0",
+        "babel-register": "^6.23.0"
+    }
 }
