--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     },
     "dependencies": {
         "bluebird": "^3.5.2",
+        "dotenv": "^6.2.0",
         "openzeppelin-zos": "^1.9.4",
+        "truffle-hdwallet-provider": "^1.0.1",
         "web3": "^1.0.0-beta.37",
         "zos": "^1.4.2",
         "zos-lib": "^1.4.1"
